--- a/index.html
+++ b/index.html
@@ -806,14 +806,13 @@ I am very fortunate to work with a group of outstanding students and starting re
 
   <li style="margin-bottom: 1ex;"><em>Short teaser for our courses at Ruhr Uni Bochum</em></a>
     <ul style="font-size: small">
-      <li>Introduction of MPI-SP during final <a href="https://www.youtube.com/channel/UC1usFRN4LCMcfIV7UjHNuQg/videos">Introduction to Cryptography 2</a> lecture:
+      <li><b>Recent:</b> Introduction of MPI-SP during final <a href="https://www.youtube.com/channel/UC1usFRN4LCMcfIV7UjHNuQg/videos">Intro to Cryptography</a> lecture:
         <a href="talks/2024-07-19-Courses-at-RUB.pdf">slides</a> and <b><a href="https://youtu.be/2JYd_IKh1mI">video</a></b> (2024-07-19)</li>
     </ul>
 
   <li style="margin-bottom: 1ex;"><em>Formally Verified Security</em></a>
-
     <ul style="font-size: small">
-      <li><a href="https://www.cis.mpg.de/graduate-programs/">CS @ Max Planck</a> Open House: <a href="talks/2024-03-21-CS-at-Max-Planck-Open-House.pdf">slides</a> and <b><a href="https://youtu.be/82c0u6-OU_g">video</a></b> (2024-03-21)</li>
+      <li><b>Recent:</b> <a href="https://www.cis.mpg.de/graduate-programs/">CS @ Max Planck</a> Open House: <a href="talks/2024-03-21-CS-at-Max-Planck-Open-House.pdf">slides</a> and <b><a href="https://youtu.be/82c0u6-OU_g">video</a></b> (2024-03-21)</li>
       <li><a href="https://casa.rub.de/en/events/casa-summer-school">CASA Summer School 2023</a>: <a href="talks/2023-08-14-CASA-Summer-School.pdf">slides</a> (2023-08-14)</li>
       <li><a href="https://www.mpi-sp.org">MPI-SP</a> Scientific Advisory Board visit: <a href="talks/2023-05-11-SAB-MPI-SP-evaluation.pdf">slides</a> (2023-05-11)</li>
       <li><a href="https://www.cis.mpg.de/graduate-programs/">CS @ Max Planck</a> Open House: <a href="talks/2020-04-03-CS-at-Max-Planck-Open-House.pdf">slides</a> (2020-04-03)</li>
@@ -821,7 +820,6 @@ I am very fortunate to work with a group of outstanding students and starting re
   </li>
 
   <li style="margin-bottom: 1ex;"><em>Formally Secure Compilation of Unsafe C Compartments</em></a>
-
     <ul style="font-size: small">
       <li><b>Recent:</b> <a href="https://research-symposium.mpi-sws.org">MPI-SWS Research Symposium</a>: <a href="talks/2023-03-10-MPI-SWS-Research-Symposium.pdf">slides</a> (2023-03-10)</li>
       <li><b></b> <a href="http://www.dagstuhl.de/21481">Dagstuhl Seminar 21481 on Secure Compilation</a>: <a href="talks/2021-12-01-Formally-verifying-a-secure-compilation-chain-for-unsafe-C-components-at-Dagstuhl.pdf">slides</a> (2021-12-01)</li>
@@ -829,7 +827,6 @@ I am very fortunate to work with a group of outstanding students and starting re
   </li>
 
   <li style="margin-bottom: 1ex;"><em>Certified Programs and Proofs, CPP</em></a>
-
     <ul style="font-size: small">
       <li>Chairs' Report: <a href="https://popl21.sigplan.org/details/CPP-2021/27/Chairs-report-and-community-meeting">slides and video</a> (2021-01-19)</li>
       <li>Chairs' Report: <a href="https://popl20.sigplan.org/details/CPP-2020-papers/30/PC-Chairs-report">slides and video</a> (2020-01-20)</li>
@@ -837,7 +834,6 @@ I am very fortunate to work with a group of outstanding students and starting re
   </li>
 
   <li style="margin-bottom: 1ex;"><em>Journey Beyond Full Abstraction:<br/>Exploring Robust Property Preservation for Secure Compilation</em></a>
-
     <ul style="font-size: small">
       <li><b>Recent:</b> <b>Invited Talk</b> at <a href="http://hotspot.compute.dtu.dk/hotspot2020.html">HotSpot Workshop</a>: <a href="talks/2020-09-07-Journey-Beyond-Full-Abstraction-HotSpot.pdf">slides</a> and <b><a href="https://youtu.be/hTLHDJGKKpc">video</a></b> (2020-09-07)</li>
       <li><a href="https://web.stevens.edu/csf2019/">32nd IEEE Computer Security Foundations Symposium (CSF)</a>: <a href="talks/2019-06-27-Journey-Beyond-Full-Abstraction-CSF.pdf">slides</a> (2019-06-27)</li>
