--- a/index.html
+++ b/index.html
@@ -835,7 +835,7 @@ I am very fortunate to work with a group of outstanding students and starting re
 
   <li style="margin-bottom: 1ex;"><em>Journey Beyond Full Abstraction:<br/>Exploring Robust Property Preservation for Secure Compilation</em></a>
     <ul style="font-size: small">
-      <li><b>Recent:</b> <b>Invited Talk</b> at <a href="http://hotspot.compute.dtu.dk/hotspot2020.html">HotSpot Workshop</a>: <a href="talks/2020-09-07-Journey-Beyond-Full-Abstraction-HotSpot.pdf">slides</a> and <b><a href="https://youtu.be/hTLHDJGKKpc">video</a></b> (2020-09-07)</li>
+      <li> <b>Invited Talk</b> at <a href="http://hotspot.compute.dtu.dk/hotspot2020.html">HotSpot Workshop</a>: <a href="talks/2020-09-07-Journey-Beyond-Full-Abstraction-HotSpot.pdf">slides</a> and <b><a href="https://youtu.be/hTLHDJGKKpc">video</a></b> (2020-09-07)</li>
       <li><a href="https://web.stevens.edu/csf2019/">32nd IEEE Computer Security Foundations Symposium (CSF)</a>: <a href="talks/2019-06-27-Journey-Beyond-Full-Abstraction-CSF.pdf">slides</a> (2019-06-27)</li>
       <li><a href="https://popl19.sigplan.org/track/prisc-2019">Workshop on Principles of Secure Compilation (PriSC @ POPL'19)</a>: <a href="talks/2019-01-13-Journey-Beyond-Full-Abstraction-PriSC.pdf">slides</a> (2019-01-13)</li>
     </ul>
