--- a/index.html
+++ b/index.html
@@ -804,6 +804,14 @@ I am very fortunate to work with a group of outstanding students and starting re
 
 <ul style="width:42em; text-align: left">
 
+  <li style="margin-bottom: 1ex;"><em>SECOMP: Formally Secure Compilation of Compartmentalized C Programs</em></a>
+    <ul style="font-size: small">
+      <li>Short talk at <a href="https://csf2024.ieee-security.org">CSF'24</a>: <a href="talks/2024-07-09-SECOMP-at-CSF-24-Short-Talks.pdf">slides</a> (2024-07-12)</li>
+      <li><b>Recent:</b> <a href="https://research-symposium.mpi-sws.org">MPI-SWS Research Symposium</a>: <a href="talks/2023-03-10-MPI-SWS-Research-Symposium.pdf">slides</a> (2023-03-10)</li>
+      <li><b></b> <a href="http://www.dagstuhl.de/21481">Dagstuhl Seminar 21481 on Secure Compilation</a>: <a href="talks/2021-12-01-Formally-verifying-a-secure-compilation-chain-for-unsafe-C-components-at-Dagstuhl.pdf">slides</a> (2021-12-01)</li>
+    </ul>
+  </li>
+
   <li style="margin-bottom: 1ex;"><em>Short teaser for our courses at Ruhr Uni Bochum</em></a>
     <ul style="font-size: small">
       <li><b>Recent:</b> Introduction of MPI-SP during final <a href="https://www.youtube.com/channel/UC1usFRN4LCMcfIV7UjHNuQg/videos">Intro to Cryptography</a> lecture:
@@ -816,13 +824,6 @@ I am very fortunate to work with a group of outstanding students and starting re
       <li><a href="https://casa.rub.de/en/events/casa-summer-school">CASA Summer School 2023</a>: <a href="talks/2023-08-14-CASA-Summer-School.pdf">slides</a> (2023-08-14)</li>
       <li><a href="https://www.mpi-sp.org">MPI-SP</a> Scientific Advisory Board visit: <a href="talks/2023-05-11-SAB-MPI-SP-evaluation.pdf">slides</a> (2023-05-11)</li>
       <li><a href="https://www.cis.mpg.de/graduate-programs/">CS @ Max Planck</a> Open House: <a href="talks/2020-04-03-CS-at-Max-Planck-Open-House.pdf">slides</a> (2020-04-03)</li>
-    </ul>
-  </li>
-
-  <li style="margin-bottom: 1ex;"><em>Formally Secure Compilation of Unsafe C Compartments</em></a>
-    <ul style="font-size: small">
-      <li><b>Recent:</b> <a href="https://research-symposium.mpi-sws.org">MPI-SWS Research Symposium</a>: <a href="talks/2023-03-10-MPI-SWS-Research-Symposium.pdf">slides</a> (2023-03-10)</li>
-      <li><b></b> <a href="http://www.dagstuhl.de/21481">Dagstuhl Seminar 21481 on Secure Compilation</a>: <a href="talks/2021-12-01-Formally-verifying-a-secure-compilation-chain-for-unsafe-C-components-at-Dagstuhl.pdf">slides</a> (2021-12-01)</li>
     </ul>
   </li>
 
