--- a/group.html
+++ b/group.html
@@ -104,7 +104,7 @@
   </div>
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://mori1116.github.io">Dongjae Lee</a></b>
+  <li style="margin-bottom: 1ex;"><b><a href="https://dongjaelee1.github.io">Dongjae Lee</a></b>
   <ul>
     <li style="margin-top: 1ex;">Research Intern at <a href="https://www.mpi-sp.org/">MPI-SP</a>, 2023-03 to 2023-08:
     Back-Translation Proof for Formally Secure Compilation of Compartmentalized C Programs
