--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 in <a href="https://en.wikipedia.org/wiki/Bochum">Bochum, Germany</a>.<br/>
 I am also Adjunct Professor (APL) in the <a href="https://informatik.rub.de/en/">Faculty of Computer Science</a>
 of <a href="https://www.ruhr-uni-bochum.de/en">Ruhr University Bochum (RUB)</a>
-and PI of the <a href="https://casa.rub.de/en/">CASA Excellence Center</a> of RUB.
+and PI <!-- for CASA 2.0 it would be Participating Scientist -->
+of the <a href="https://casa.rub.de/en/">CASA Excellence Center</a> of RUB.
 </p>
 
 <p style="width:42em; text-align: left">
@@ -161,10 +162,7 @@ PL (e.g., POPL and ICFP) and/or security (e.g., CCS and CSF).</p>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://www.ieee-security.org/CSFWweb/index.html">Computer Security Foundations</a>, CSF</b> (<b>Steering Committee Member</b> since 2024, <b>Test-of-Time Awards Chair</b> in <a href="https://csf2023.ieee-security.org">2023</a> and <a href="https://csf2024.ieee-security.org/">2024</a>; also PC Member in <a href="https://www.ieee-security.org/TC/CSF2020/">2020</a>, <a href="https://www.ieee-security.org/TC/CSF2021/">2021</a> and <a href="https://csf2024.ieee-security.org/">2024</a>)
   <ul>
-  <!-- <li><b>Submission deadlines: <del>8 May 2020, 2 October 2020,</del> and 8 February 2021</b></li> -->
-  <!-- <li>CSF 2023 Symposium: 10-13 July 2023, Dubrovnik, Croatia</li> -->
-  <!-- <li>Submission deadlines: <del>15 May 2023, 30 Sept 2023, and</del> <b>3 Feb 2024</b></li> -->
-  <li>Next symposium (<a href="https://csf2024.ieee-security.org">CSF 2024</a>): 8-12 July 2024, Enschede, The Netherlands</li>
+  <!-- <li>Next symposium (<a href="https://csf2024.ieee-security.org">CSF 2024</a>): 8-12 July 2024, Enschede, The Netherlands</li> -->
   <li>Next submission deadlines (<a href="https://csf2025.ieee-security.org">CSF 2025</a>): <strike>28 May 2024</strike>, 1 October 2024, 4 February 2025</li>
   </ul>
   </li>
