--- a/index.html
+++ b/index.html
@@ -138,10 +138,10 @@ PL (e.g., POPL and ICFP) and/or security (e.g., CCS and CSF).</p>
   <li style="margin-bottom: 1ex;"><b><a href="https://www.sigplan.org/Conferences/CPP/"><!-- International Conference on--> Certified Programs and Proofs</a>, CPP</b> (<b>Steering Committee Chair</b> since 2021;<br/> also <b>PC Chair and Conference Chair</b> in <a href="https://popl20.sigplan.org/home/CPP-2020">2020</a> and <a href="https://popl21.sigplan.org/home/CPP-2021">2021</a>; also PC member in <a href="https://people.csail.mit.edu/adamc/cpp16/">2016</a>)
 <!-- https://popl24.sigplan.org/series/CPP -->
   <ul>
-  <li>Abstract deadline: 10 September 2024</li>
-  <li>Submission deadline: 17 September 2024</li>
+  <li><a href="https://popl25.sigplan.org/home/CPP-2025">CPP 2025</a> abstract deadline: 10 September 2024</li>
+  <li><a href="https://popl25.sigplan.org/home/CPP-2025">CPP 2025</a> submission deadline: 17 September 2024</li>
   <!-- <li>Early registration deadline: 14 December 2023</li> -->
-  <li>Conference: 20-21 January 2025, Denver, Colorado, USA (with <a href="https://popl25.sigplan.org">POPL</a>)</li>
+  <li><a href="https://popl25.sigplan.org/home/CPP-2025">CPP 2025</a> conference: 20-21 January 2025, Denver, Colorado, USA (with <a href="https://popl25.sigplan.org">POPL</a>)</li>
   </ul>
   </li>
 
@@ -152,7 +152,7 @@ PL (e.g., POPL and ICFP) and/or security (e.g., CCS and CSF).</p>
   <ul>
   <!-- <li>First submission deadline: <b>28 January 2024</b></li> -->
   <!-- <li>Second submission deadline: <b>29 April 2024</b></li> -->
-  <li>Conference: 14-18 October 2024, Salt Lake City, Utah, USA</li>
+  <li><a href="https://www.sigsac.org/ccs/CCS2024/">CCS 2024</a> Conference: 14-18 October 2024, Salt Lake City, Utah, USA</li>
   </ul>
   </li>
 
@@ -163,7 +163,7 @@ PL (e.g., POPL and ICFP) and/or security (e.g., CCS and CSF).</p>
   <li style="margin-bottom: 1ex;"><b><a href="https://www.ieee-security.org/CSFWweb/index.html">Computer Security Foundations</a>, CSF</b> (<b>Steering Committee Member</b> since 2024, <b>Test-of-Time Awards Chair</b> in <a href="https://csf2023.ieee-security.org">2023</a> and <a href="https://csf2024.ieee-security.org/">2024</a>; also PC Member in <a href="https://www.ieee-security.org/TC/CSF2020/">2020</a>, <a href="https://www.ieee-security.org/TC/CSF2021/">2021</a> and <a href="https://csf2024.ieee-security.org/">2024</a>)
   <ul>
   <!-- <li>Next symposium (<a href="https://csf2024.ieee-security.org">CSF 2024</a>): 8-12 July 2024, Enschede, The Netherlands</li> -->
-  <li>Next submission deadlines (<a href="https://csf2025.ieee-security.org">CSF 2025</a>): <strike>28 May 2024</strike>, 1 October 2024, 4 February 2025</li>
+  <li><a href="https://csf2025.ieee-security.org">CSF 2025</a> submission deadlines: <strike>28 May 2024</strike>, 1 October 2024, 4 February 2025</li>
   </ul>
   </li>
 
@@ -177,9 +177,9 @@ PL (e.g., POPL and ICFP) and/or security (e.g., CCS and CSF).</p>
      also PC Member in <a href="https://popl17.sigplan.org/">2017</a> and <a href="https://popl24.sigplan.org">2024</a>)
   <ul>
   <!-- <li>Abstract deadline: 1 July 2017</li> -->
-  <li>Submission deadline: 11 July 2024</li>
+  <!-- <li>Submission deadline: 11 July 2024</li> -->
   <!-- <li>Early registration deadline: 14 December 2023</li> -->
-  <li>Symposium: 19-25 January 2025, Denver, Colorado, USA</li>
+  <li><a href="https://popl25.sigplan.org">POPL 2025</a> symposium: 19-25 January 2025, Denver, Colorado, USA</li>
   </ul>
   </li>
 
