--- a/index.html
+++ b/index.html
@@ -959,7 +959,7 @@ IRISA, Rennes: <a href="talks/2018-02-05-Secure-Compilation-Rennes.pdf">slides</
 
 <ul style="width:42em; text-align: left">
 
-  <li style="margin-bottom: 1ex;"><b>Upcoming: <a href="">Proofs are Programs</a></b> course at <a href="https://informatik.rub.de/en/">Ruhr University Bochum</a>, October 2024--February 2025</a>
+  <li style="margin-bottom: 1ex;"><b>Upcoming: <a href="https://moodle.ruhr-uni-bochum.de/course/view.php?id=60387">Proofs are Programs</a></b> course at <a href="https://informatik.rub.de/en/">Ruhr University Bochum</a>, October 2024--February 2025</a>
   </li>
 
   <li style="margin-bottom: 1ex;"><b>Ongoing: <a href="https://moodle.ruhr-uni-bochum.de/enrol/index.php?id=57071">Functional Programming</a></b> course at <a href="https://informatik.rub.de/en/">Ruhr University Bochum</a>, April--July 2024</a>
