--- a/group.html
+++ b/group.html
@@ -67,12 +67,11 @@
   <li style="margin-bottom: 1ex;"><b><a href="https://github.com/sharwig">Sebastian Harwig</a></b> (Research Student Assistant, RUB)</li>
    <!-- started in April 2024 -->
 
-
   <li style="margin-bottom: 1ex;"><b><a href="https://www.linkedin.com/in/ricleanu/">Ruxandra Icleanu</a></b> (Research Intern, University of Edinburgh)</li>
   <!-- started in June 2024 -->
 
-  <li style="margin-bottom: 1ex;"><b><a href="">Léon Ducruet</a></b> (Research Intern, ENS Lyon) -- starting in October 2024</li>
-
+  <li style="margin-bottom: 1ex;"><b><a href="">Léon Ducruet</a></b> (Research Intern, ENS Lyon)</li>
+  <!-- starting in Sept 2024 -->
 </ul>
 
 
@@ -80,8 +79,16 @@
 
 <ul style="width:42em; text-align: left">
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://gitlab.aliens-lyon.fr/lucie.lahaye">Lucie Lahaye</a></b> (Research Intern, ENS Lyon)</li>
-  <!-- starting in May 2024 -->
+  <li style="margin-bottom: 1ex;"><b><a href="https://gitlab.aliens-lyon.fr/lucie.lahaye">Lucie Lahaye</a></b></li>
+  <ul>
+    <li style="margin-top: 1ex;">Research Intern at <a href="https://www.mpi-sp.org/">MPI-SP</a>, 2024-05 to 2024-07:<br/>
+    Property-based testing in Coq against speculative execution attacks
+    </li>
+  </ul>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">
+  [MSc Student at ENS Lyon]
+  </div>
+  </li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://github.com/jos-len">Joseph Lenormand</a></b>
   <ul>
