--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@ I am very fortunate to work with a group of outstanding students and starting re
   <li style="margin-bottom: 1ex;"><a href="https://www.linkedin.com/in/ricleanu/">Ruxandra Icleanu</a> (Research Intern, University of Edinburgh)</li>
   <!-- started in June 2024 -->
 
-  <li style="margin-bottom: 1ex;"><a href="">Léon Ducruet</a> (Research Intern, ENS Lyon) -- starting in October 2024</li>
+  <li style="margin-bottom: 1ex;"><a href="">Léon Ducruet</a> (Research Intern, ENS Lyon)</li>
 
 </ul>
 
