--- a/group.html
+++ b/group.html
@@ -119,7 +119,7 @@
     </li>
   </ul>
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">
-  [MSc Student at Seoul National University, South Korea] <b>[Soon PhD Student at MIT]</b>
+  [MSc Student at Seoul National University, South Korea] <b>[Now PhD Student at MIT]</b>
   </div>
   </li>
 
@@ -299,7 +299,7 @@ PhD student at <a href="http://web.fceia.unr.edu.ar/">National University of Ros
   </ul>
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">
 [Then PostDoc at <a href="https://www.cylab.cmu.edu/">Carnegie Mellon University</a> and <a href="http://www.bu.edu/cs/">Boston University</a>]<br/>
-[<b>Now Assistant Professor at <a href="https://www.rit.edu/computing/department-computer-science">Rochester Institute of Technology</a> since January 2023</b>]
+[<b>Now Assistant Professor at <a href="https://www.rit.edu/computing/department-computer-science">Rochester Institute of Technology</a></b>]
 </div></li>
 
   <li style="margin-bottom: 1ex;"><b><a href="http://www.ccs.neu.edu/home/amal/">Amal Ahmed</a></b>
