--- a/index.html
+++ b/index.html
@@ -156,15 +156,23 @@ PL (e.g., POPL and ICFP) and/or security (e.g., CCS and CSF).</p>
   </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;">
-    <b><a href="https://dl.acm.org/journal/tops">Transactions on Privacy and Security</a>, TOPS</b> (Editor since May 2024)
-  </li>
-
   <li style="margin-bottom: 1ex;"><b><a href="https://www.ieee-security.org/CSFWweb/index.html">Computer Security Foundations</a>, CSF</b> (<b>Steering Committee Member</b> since 2024, <b>Test-of-Time Awards Chair</b> in <a href="https://csf2023.ieee-security.org">2023</a> and <a href="https://csf2024.ieee-security.org/">2024</a>; also PC Member in <a href="https://www.ieee-security.org/TC/CSF2020/">2020</a>, <a href="https://www.ieee-security.org/TC/CSF2021/">2021</a> and <a href="https://csf2024.ieee-security.org/">2024</a>)
   <ul>
   <!-- <li>Next symposium (<a href="https://csf2024.ieee-security.org">CSF 2024</a>): 8-12 July 2024, Enschede, The Netherlands</li> -->
   <li><a href="https://csf2025.ieee-security.org">CSF 2025</a> submission deadlines: <strike>28 May 2024</strike>, 1 October 2024, 4 February 2025</li>
   </ul>
+  </li>
+
+  <li style="margin-bottom: 1ex;"><b><a href="https://popl23.sigplan.org/series/prisc"><!-- Workshop on --> Principles of Secure Compilation</a>, PriSC</b> (<b>Steering Committee Chair</b> 2019--2023, <b>Steering Committee Member</b> since 2023, also <b>PC Chair</b> in <a href="https://popl18.sigplan.org/track/prisc-2018">2018</a>)
+  <ul>
+  <li><a href="https://popl25.sigplan.org/">PriSC 2025</a> submission deadline: 7 November 2024</li>
+  <!-- <li>Early registration deadline: 14 December 2023</li> -->
+  <li><a href="https://popl25.sigplan.org/">PriSC 2025</a> workshop: 20 January 2025, Denver, Colorado, USA (with <a href="https://popl25.sigplan.org/">POPL</a>)</li>
+  </ul>
+  </li>
+
+  <li style="margin-bottom: 1ex;">
+    <b><a href="https://dl.acm.org/journal/tops">Transactions on Privacy and Security</a>, TOPS</b> (Editor since May 2024)
   </li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://danel.ahman.ee">Danel Ahman</a></b>, former PostDoc in my group, started as Associate Professor at <a href="https://cs.ut.ee/en">University of Tartu</a> in January 2024.</li>
@@ -186,14 +194,6 @@ PL (e.g., POPL and ICFP) and/or security (e.g., CCS and CSF).</p>
   <!-- <li style="margin-bottom: 1ex;"><b>Open position: -->
   <!-- <a href="https://groups.google.com/g/fstar-mailing-list/c/N6L2tl3Axt8">Looking for PostDoc on Program Verification Techniques in F* and Coq</a></b> -->
   <!-- </li> -->
-
-  <li style="margin-bottom: 1ex;"><b><a href="https://popl23.sigplan.org/series/prisc"><!-- Workshop on --> Principles of Secure Compilation</a>, PriSC</b> (<b>Steering Committee Chair</b> 2019--2023, <b>Steering Committee Member</b> since 2023, also <b>PC Chair</b> in <a href="https://popl18.sigplan.org/track/prisc-2018">2018</a>)
-  <ul>
-  <!-- <li>Submission deadline: 2 November 2023</li> -->
-  <!-- <li>Early registration deadline: 14 December 2023</li> -->
-  <!-- <li>Workshop: 20 January 2024, London, UK (with <a href="https://popl24.sigplan.org/">POPL</a>)</li> -->
-  </ul>
-  </li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://theowinterhalter.github.io/">Théo Winterhalter</a></b>, former PostDoc in my group, took a tenured researcher position (<a href="https://en.wikipedia.org/wiki/Academic_ranks_in_France#Research-only_positions">CR</a>) at Inria Saclay, in <a href="https://deducteam.gitlabpages.inria.fr/">Deducteam</a>, starting in October 2022. <b><a href="https://kenji.maillard.blue/">Kenji Mailard</a></b>, graduated PhD student I supervised, has obtained a similar Inria position (<a href="https://www.inria.fr/en/inria-starting-faculty-position-isfp">ISFP</a>), in the <a href="https://gallinette.gitlabpages.inria.fr/website/">Gallinette team</a> in Nantes.</li>
 
