--- a/group.html
+++ b/group.html
@@ -438,7 +438,8 @@ Founder and CEO of <a href="https://www.legai.app">LegAI</a>, and PostDoc at <a 
 [MSc Student at <a href="http://www.ece.ntua.gr/index.php?lang=en">NTU Athens<a/> and <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php">MPRI</a>]
 [Then PhD student at <a href="https://www.cs.princeton.edu/">Princeton University</a>]<br/>
 [Then PostDoc at <a href="http://www.ccs.neu.edu/">Northeastern University</a>]
-<b>[Now Formal Verification Research Engineer at <a href="https://ethereum.foundation/">Ethereum Foundation</a>]</b>
+<b>[Now Assistant Professor at National Technical University of Athens and
+Formal Verification Researcher at <a href="https://ethereum.foundation/">Ethereum Foundation</a>]</b>
 </div></li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://www.linkedin.com/in/nickgiannarakis">Nick Giannarakis</a></b>
