--- a/index.html
+++ b/index.html
@@ -135,6 +135,10 @@ PL (e.g., POPL and ICFP) and/or security (e.g., CCS and CSF).</p>
 <h2>News/Events</h2>
 <ul style="width:42em; text-align: left">
 
+  <li style="margin-bottom: 1ex;"><b><a href="https://zoep.github.io/">Zoe Paraskevopoulou</a></b>,
+  former MSc intern in my group, took an Assistant Professor position at
+  National Technical University of Athens in September 2024.</li>
+
   <li style="margin-bottom: 1ex;"><b><a href="https://www.sigplan.org/Conferences/CPP/"><!-- International Conference on--> Certified Programs and Proofs</a>, CPP</b> (<b>Steering Committee Chair</b> since 2021;<br/> also <b>PC Chair and Conference Chair</b> in <a href="https://popl20.sigplan.org/home/CPP-2020">2020</a> and <a href="https://popl21.sigplan.org/home/CPP-2021">2021</a>; also PC member in <a href="https://people.csail.mit.edu/adamc/cpp16/">2016</a>)
 <!-- https://popl24.sigplan.org/series/CPP -->
   <ul>
