--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@ PL (e.g., POPL and ICFP) and/or security (e.g., CCS and CSF).</p>
   <li style="margin-bottom: 1ex;"><b><a href="https://www.sigplan.org/Conferences/CPP/"><!-- International Conference on--> Certified Programs and Proofs</a>, CPP</b> (<b>Steering Committee Chair</b> since 2021;<br/> also <b>PC Chair and Conference Chair</b> in <a href="https://popl20.sigplan.org/home/CPP-2020">2020</a> and <a href="https://popl21.sigplan.org/home/CPP-2021">2021</a>; also PC member in <a href="https://people.csail.mit.edu/adamc/cpp16/">2016</a>)
 <!-- https://popl24.sigplan.org/series/CPP -->
   <ul>
-  <li><a href="https://popl25.sigplan.org/home/CPP-2025">CPP 2025</a> abstract deadline: 10 September 2024</li>
-  <li><a href="https://popl25.sigplan.org/home/CPP-2025">CPP 2025</a> submission deadline: 17 September 2024</li>
+  <!-- <li><a href="https://popl25.sigplan.org/home/CPP-2025">CPP 2025</a> abstract deadline: 10 September 2024</li> -->
+  <!-- <li><a href="https://popl25.sigplan.org/home/CPP-2025">CPP 2025</a> submission deadline: 17 September 2024</li> -->
   <!-- <li>Early registration deadline: 14 December 2023</li> -->
   <li><a href="https://popl25.sigplan.org/home/CPP-2025">CPP 2025</a> conference: 20-21 January 2025, Denver, Colorado, USA (with <a href="https://popl25.sigplan.org">POPL</a>)</li>
   </ul>
