--- a/group.html
+++ b/group.html
@@ -255,7 +255,7 @@ PhD student at <a href="http://web.fceia.unr.edu.ar/">National University of Ros
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">
 <!-- [Then Student Researcher at Université Denis Diderot]<br/>-->
 [Then MSc student at Université Paris Cité and research apprentice at <a href="https://www.irif.fr">IRIF</a>]
-[Now Senior Compiler Engineer at Imagination Technologies]
+[Now Senior Compiler Engineer at <!-- Imagination Technologies --> Codasip]
   </div>
   </li>
 
@@ -269,6 +269,7 @@ PhD student at <a href="http://web.fceia.unr.edu.ar/">National University of Ros
 
   <li style="margin-bottom: 1ex;"><b><a href="https://pleiad.cl/people/elabrada">Elizabeth Labrada</a></b>
   (Research Intern/Visitor from 2018-10 to 2019-01)
+  <!-- https://www.linkedin.com/in/elizabeth-labrada/ -->
   <!-- <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[PhD Student at University of Chile]</div> -->
   </li>
 
@@ -318,7 +319,7 @@ PhD student at <a href="http://web.fceia.unr.edu.ar/">National University of Ros
     <li style="margin-top: 1ex;">PostDoctoral Researcher at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a>, 2017-01 to 2017-12:
     <a href="https://arxiv.org/abs/1802.00588">Formally Secure Compilation</a></li>
   </ul>
-  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Now Developer at <a href="https://www.nomadic-labs.com/">Nomadic Labs</a> working on <a href="https://tezos.com/">Tezos</a>]<b>[Now Research Scientist at <a href="https://matter-labs.io">Matter Labs</a>]</b></div></li>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Then Developer at <a href="https://www.nomadic-labs.com/">Nomadic Labs</a> working on <a href="https://tezos.com/">Tezos</a>]<b>[Now Research Scientist at <a href="https://matter-labs.io">Matter Labs</a>]</b></div></li>
 
   <li style="margin-bottom: 1ex;"><b><a href="http://fachini.net/">Guglielmo Fachini</a></b>
   <ul>
