--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ PL (e.g., POPL and ICFP) and/or security (e.g., CCS and CSF).</p>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://zoep.github.io/">Zoe Paraskevopoulou</a></b>,
   former MSc intern in my group and longer-term collaborator, took an Assistant Professor position at
-  National Technical University of Athens in September 2024.</li>
+  the <a href="https://www.ece.ntua.gr/en/">National Technical University of Athens</a> in September 2024.</li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://www.sigplan.org/Conferences/CPP/"><!-- International Conference on--> Certified Programs and Proofs</a>, CPP</b> (<b>Steering Committee Chair</b> since 2021;<br/> also <b>PC Chair and Conference Chair</b> in <a href="https://popl20.sigplan.org/home/CPP-2020">2020</a> and <a href="https://popl21.sigplan.org/home/CPP-2021">2021</a>; also PC member in <a href="https://people.csail.mit.edu/adamc/cpp16/">2016</a>)
 <!-- https://popl24.sigplan.org/series/CPP -->
