--- a/group.html
+++ b/group.html
@@ -439,7 +439,7 @@ Founder and CEO of <a href="https://www.legai.app">LegAI</a>, and PostDoc at <a 
 [MSc Student at <a href="http://www.ece.ntua.gr/index.php?lang=en">NTU Athens<a/> and <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php">MPRI</a>]
 [Then PhD student at <a href="https://www.cs.princeton.edu/">Princeton University</a>]<br/>
 [Then PostDoc at <a href="http://www.ccs.neu.edu/">Northeastern University</a>]
-<b>[Now Assistant Professor at National Technical University of Athens and
+<b>[Now Assistant Professor at <a href="https://www.ece.ntua.gr/en/">National Technical University of Athens</a> and
 Formal Verification Researcher at <a href="https://ethereum.foundation/">Ethereum Foundation</a>]</b>
 </div></li>
 
