--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ PL (e.g., POPL and ICFP) and/or security (e.g., CCS and CSF).</p>
   <li style="margin-bottom: 1ex;"><b><a href="https://www.ieee-security.org/CSFWweb/index.html">Computer Security Foundations</a>, CSF</b> (<b>Steering Committee Member</b> since 2024, <b>Test-of-Time Awards Chair</b> in <a href="https://csf2023.ieee-security.org">2023</a> and <a href="https://csf2024.ieee-security.org/">2024</a>; also PC Member in <a href="https://www.ieee-security.org/TC/CSF2020/">2020</a>, <a href="https://www.ieee-security.org/TC/CSF2021/">2021</a> and <a href="https://csf2024.ieee-security.org/">2024</a>)
   <ul>
   <!-- <li>Next symposium (<a href="https://csf2024.ieee-security.org">CSF 2024</a>): 8-12 July 2024, Enschede, The Netherlands</li> -->
-  <li><a href="https://csf2025.ieee-security.org">CSF 2025</a> submission deadlines: <strike>28 May 2024</strike>, 1 October 2024, 4 February 2025</li>
+  <li><a href="https://csf2025.ieee-security.org">CSF 2025</a> submission deadlines: <strike>28 May 2024, 1 October 2024</strike>, 4 February 2025</li>
   </ul>
   </li>
 
@@ -806,8 +806,9 @@ I am very fortunate to work with a group of outstanding students and starting re
 
   <li style="margin-bottom: 1ex;"><em>SECOMP: Formally Secure Compilation of Compartmentalized C Programs</em></a>
     <ul style="font-size: small">
+      <li><b>Recent:</b> <a href="https://www.newton.ac.uk/event/bsp/">Big Specification programme at Newton Institute</a>, Cambridge, UK: <a href="talks/2024-10-02-SECOMP-in-Cambridge.pdf">slides</a> (2024-10-02)</li>
       <li>Short talk at <a href="https://csf2024.ieee-security.org">CSF'24</a>: <a href="talks/2024-07-09-SECOMP-at-CSF-24-Short-Talks.pdf">slides</a> (2024-07-12)</li>
-      <li><b>Recent:</b> <a href="https://research-symposium.mpi-sws.org">MPI-SWS Research Symposium</a>: <a href="talks/2023-03-10-MPI-SWS-Research-Symposium.pdf">slides</a> (2023-03-10)</li>
+      <li><a href="https://research-symposium.mpi-sws.org">MPI-SWS Research Symposium</a>: <a href="talks/2023-03-10-MPI-SWS-Research-Symposium.pdf">slides</a> (2023-03-10)</li>
       <li><b></b> <a href="http://www.dagstuhl.de/21481">Dagstuhl Seminar 21481 on Secure Compilation</a>: <a href="talks/2021-12-01-Formally-verifying-a-secure-compilation-chain-for-unsafe-C-components-at-Dagstuhl.pdf">slides</a> (2021-12-01)</li>
     </ul>
   </li>
