--- a/index.html
+++ b/index.html
@@ -971,7 +971,7 @@ IRISA, Rennes: <a href="talks/2018-02-05-Secure-Compilation-Rennes.pdf">slides</
   <li style="margin-bottom: 1ex;"><b>Recent: <a href="https://moodle.ruhr-uni-bochum.de/enrol/index.php?id=54279">Foundations of Programming Languages, Verification, and Security</a></b> course at <a href="https://informatik.rub.de/en/">Ruhr University Bochum</a>, October 2023--February 2024</a>
   </li>
 
-  <li style="margin-bottom: 1ex;"><b>Recent: <a href="https://moodle.ruhr-uni-bochum.de/course/view.php?id=51278">Proofs are Programs</a></b> course at <a href="https://informatik.rub.de/en/">Ruhr University Bochum</a>, April--July 2023</a>
+  <li style="margin-bottom: 1ex;"><b><a href="https://moodle.ruhr-uni-bochum.de/course/view.php?id=51278">Proofs are Programs</a></b> course at <a href="https://informatik.rub.de/en/">Ruhr University Bochum</a>, April--July 2023</a>
   </li>
 
   <li style="margin-bottom: 1ex;"><b><a href="teaching/lyon2019/">Writing and Verifying Functional Programs in Coq</a></b> course at <br/><a href="http://www.mathinfoly.org">Summer School on Cryptography, Blockchain, and Program Verification, Mathinfoly 2019</a>,<br/> 24-31 August 2019 at INSA, Lyon, France</a>
