--- a/index.html
+++ b/index.html
@@ -135,6 +135,15 @@ PL (e.g., POPL and ICFP) and/or security (e.g., CCS and CSF).</p>
 <h2>News/Events</h2>
 <ul style="width:42em; text-align: left">
 
+  <li style="margin-bottom: 1ex;">
+    <b><a href="https://icfp25.sigplan.org">International Conference on Functional Programming</a>, ICFP</b>
+    (<b>PC Member in <a href="https://icfp25.sigplan.org">2025</a>)
+  <ul>
+  <li>Submission deadline: <b>27 February 2025</b></li>
+  <!-- <li><a href="https://icfp25.sigplan.org">ICFP 2025</a> Conference: 12-18 October 2025, Singapore (co-located with SPLASH)</li> -->
+  </ul>
+  </li>
+
   <li style="margin-bottom: 1ex;"><b><a href="https://zoep.github.io/">Zoe Paraskevopoulou</a></b>,
   former MSc intern in my group and longer-term collaborator, took an Assistant Professor position at
   the <a href="https://www.ece.ntua.gr/en/">National Technical University of Athens</a> in September 2024.</li>
