--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ PL (e.g., POPL and ICFP) and/or security (e.g., CCS and CSF).</p>
 
   <li style="margin-bottom: 1ex;">
     <b><a href="https://icfp25.sigplan.org">International Conference on Functional Programming</a>, ICFP</b>
-    (<b>PC Member in <a href="https://icfp25.sigplan.org">2025</a>)
+    (PC Member in <a href="https://icfp25.sigplan.org">2025</a>)
   <ul>
   <li>Submission deadline: <b>27 February 2025</b></li>
   <!-- <li><a href="https://icfp25.sigplan.org">ICFP 2025</a> Conference: 12-18 October 2025, Singapore (co-located with SPLASH)</li> -->
