--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ PL (e.g., POPL and ICFP) and/or security (e.g., CCS and CSF).</p>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://popl23.sigplan.org/series/prisc"><!-- Workshop on --> Principles of Secure Compilation</a>, PriSC</b> (<b>Steering Committee Chair</b> 2019--2023, <b>Steering Committee Member</b> since 2023, also <b>PC Chair</b> in <a href="https://popl18.sigplan.org/track/prisc-2018">2018</a>)
   <ul>
-  <li><a href="https://popl25.sigplan.org/">PriSC 2025</a> submission deadline: 18 November 2024</li>
+  <!-- <li><a href="https://popl25.sigplan.org/">PriSC 2025</a> submission deadline: 18 November 2024</li> -->
   <!-- <li>Early registration deadline: 14 December 2023</li> -->
   <li><a href="https://popl25.sigplan.org/">PriSC 2025</a> workshop: 20 January 2025, Denver, Colorado, USA (with <a href="https://popl25.sigplan.org/">POPL</a>)</li>
   </ul>
