--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ PL (e.g., POPL and ICFP) and/or security (e.g., CCS and CSF).</p>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://danel.ahman.ee">Danel Ahman</a></b>, former PostDoc in my group, started as Associate Professor at <a href="https://cs.ut.ee/en">University of Tartu</a> in January 2024.</li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://perso.ens-lyon.fr/adrien.durier/">Adrien Durier</a></b>, former PostDoc in my group, started as Associate Professor (Maître de Conférences) at <a href="https://www.universite-paris-saclay.fr/en/education/master/computer-science">Université Paris-Saclay</a> and <a href="https://lmf.cnrs.fr/Main/HomePage?lang=en">LMF</a> in September 2023.</li>
+  <li style="margin-bottom: 1ex;"><b><a href="https://web.archive.org/web/20240621065705/https://perso.ens-lyon.fr/adrien.durier">Adrien Durier</a></b>, former PostDoc in my group, started as Associate Professor (Maître de Conférences) at <a href="https://www.universite-paris-saclay.fr/en/education/master/computer-science">Université Paris-Saclay</a> and <a href="https://lmf.cnrs.fr/Main/HomePage?lang=en">LMF</a> in September 2023.</li>
 
   <li style="margin-bottom: 1ex;">
     <b><a href="https://popl24.sigplan.org/series/POPL">Principles of Programming Languages</a>, POPL</b>
