--- a/index.html
+++ b/index.html
@@ -609,7 +609,7 @@ I am very fortunate to work with a group of outstanding students and starting re
     C&#259;t&#259;lin Hri&#539;cu, and
     Andrew Tolmach.
     <b><a href="http://arxiv.org/abs/2401.16277">SECOMP: Formally Secure Compilation of Compartmentalized C Programs</a></b>.
-    Accepted at CCS'24, Draft from July 2024.
+    In <a href="https://www.sigsac.org/ccs/CCS2024/">31th ACM SIGSAC Conference on Computer and Communications Security (CCS)</a>, pages 1061–1075. ACM, October 2024.
     <ul style="font-size: small">
       <li><a href="https://github.com/secure-compilation/CompCert">Coq development</a></li>
       <li><a href="publications/SECOMP2CHERI-PriSC23.pdf">An extended abstract</a> about this work was presented at
