--- a/index.html
+++ b/index.html
@@ -654,7 +654,7 @@ I am very fortunate to work with a group of outstanding students and starting re
     C&#259;t&#259;lin Hri&#539;cu, and
     Bas Spitters.
     <b><a href="https://eprint.iacr.org/2023/185">The Last Yard: Foundational End-to-End Verification of High-Speed Cryptography</a></b>.
-    To appear in ACM SIGPLAN International Conference on Certified Programs and Proofs (CPP). January 2024.
+    In <a href="https://popl24.sigplan.org/home/CPP-2024">13th ACM SIGPLAN International Conference on Certified Programs and Proofs (CPP)</a>, pages 30–44. ACM, January 2024.
     <ul style="font-size: small">
       <li><a href="https://github.com/SSProve/ssprove-jasmin">Coq development</a></li>
     </ul>
