--- a/group.html
+++ b/group.html
@@ -67,17 +67,23 @@
   <li style="margin-bottom: 1ex;"><b><a href="https://github.com/sharwig">Sebastian Harwig</a></b> (Research Student Assistant, RUB)</li>
    <!-- started in April 2024 -->
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://www.linkedin.com/in/ricleanu/">Ruxandra Icleanu</a></b> (Research Intern, University of Edinburgh)</li>
-  <!-- started in June 2024 -->
-
   <li style="margin-bottom: 1ex;"><b><a href="">Léon Ducruet</a></b> (Research Intern, ENS Lyon)</li>
   <!-- starting in Sept 2024 -->
+
+  <li style="margin-bottom: 1ex;"><a href="">Basile Schlosser</a> (Research Intern, ENS Paris-Saclay) -- starting in February 2025</li>
+
+  <li style="margin-bottom: 1ex;"><a href="">Jonathan Baumann</a> (Research Intern, ENS Paris-Saclay) -- starting in April 2025</li>
+
+  <li style="margin-bottom: 1ex;"><a href="">Julay Leatherman-Brooks</a> (Research Intern, Portland State University) -- starting in July 2025</li>
 </ul>
 
 
 <h2>Past Group Members</h2>
 
 <ul style="width:42em; text-align: left">
+
+  <li style="margin-bottom: 1ex;"><b><a href="https://www.linkedin.com/in/ricleanu/">Ruxandra Icleanu</a></b> (Research Intern, University of Edinburgh)</li>
+  <!-- started in June 2024 -->
 
   <li style="margin-bottom: 1ex;"><b><a href="https://gitlab.aliens-lyon.fr/lucie.lahaye">Lucie Lahaye</a></b></li>
   <ul>
