--- a/index.html
+++ b/index.html
@@ -583,10 +583,13 @@ I am very fortunate to work with a group of outstanding students and starting re
   <li style="margin-bottom: 1ex;"><a href="https://github.com/sharwig">Sebastian Harwig</a> (Research Student Assistant, RUB)</li>
    <!-- started in April 2024 -->
 
-  <li style="margin-bottom: 1ex;"><a href="https://www.linkedin.com/in/ricleanu/">Ruxandra Icleanu</a> (Research Intern, University of Edinburgh)</li>
-  <!-- started in June 2024 -->
-
   <li style="margin-bottom: 1ex;"><a href="">Léon Ducruet</a> (Research Intern, ENS Lyon)</li>
+
+  <li style="margin-bottom: 1ex;"><a href="">Basile Schlosser</a> (Research Intern, ENS Paris-Saclay) -- starting in February 2025</li>
+
+  <li style="margin-bottom: 1ex;"><a href="">Jonathan Baumann</a> (Research Intern, ENS Paris-Saclay) -- starting in April 2025</li>
+
+  <li style="margin-bottom: 1ex;"><a href="">Julay Leatherman-Brooks</a> (Research Intern, Portland State University) -- starting in July 2025</li>
 
 </ul>
 
