--- a/index.html
+++ b/index.html
@@ -817,6 +817,20 @@ I am very fortunate to work with a group of outstanding students and starting re
 
 <ul style="width:42em; text-align: left">
 
+  <li style="margin-bottom: 1ex;"><em>My Journey in Secure Compilation</em></a>
+    <ul style="font-size: small">
+      <li><a href="https://popl25.sigplan.org/home/PLMW-POPL-2025">Programming Languages Mentoring Workshop @ POPL'25</a>: <a href="talks/2025-01-21-My-Journey-in-Secure-Compilation.pdf">slides</a> (2025-01-21)</li>
+    </ul>
+
+    <ul style="font-size: small">
+      <li><a href="https://sympa.inria.fr/sympa/arc/epi-prosecco.seminars/2019-01/msg00001.html">Habilitation defense @ Inria Paris</a>: <a href="talks/2019-01-29-Secure-Compilation-Habil.pdf">slides</a> (2019-01-29)</li>
+    </ul>
+
+    <ul style="font-size: small">
+      <li><b>Invited Keynote talk</b> at <a href="https://fmse.info.uaic.ro/event/from-2018/">Working Formal Methods Symposium (FROM 2018)</a>: <a href="talks/2018-06-20-Secure-Compilation-FROM.pdf">slides</a> (2018-06-20)</li>
+    </ul>
+  </li>
+
   <li style="margin-bottom: 1ex;"><em>SECOMP: Formally Secure Compilation of Compartmentalized C Programs</em></a>
     <ul style="font-size: small">
       <li><b>Recent:</b> <a href="https://www.newton.ac.uk/event/bsp/">Big Specification programme at Newton Institute</a>, Cambridge, UK: <a href="talks/2024-10-02-SECOMP-in-Cambridge.pdf">slides</a> (2024-10-02)</li>
@@ -886,16 +900,6 @@ IRISA, Rennes: <a href="talks/2018-02-05-Secure-Compilation-Rennes.pdf">slides</
       <li><a href="http://popl18.sigplan.org/track/prisc-2018">Workshop on Principles of Secure Compilation (PriSC'18)</a> at POPL'19 in LA: <a href="https://popl18.sigplan.org/event?action-call-with-get-request-type=1&action253048efca6aee4547702963143c6170288=1&__ajax_runtime_request__=1&context=POPL-2018&event=prisc-2018-formally-secure-compilation-of-unsafe-low-level-components">slides</a> (2018-01-13)</li>
       <li><a href="https://www.info.uaic.ro/bin/Main/">Al. I. Cuza University of Iasi</a>: <a href="talks/2017-12-18-Secure-Compilation-Infoiasi.pdf">slides</a> (2017-12-18)</li>
       <li><a href="http://www.ccs.neu.edu/home/weiss/esop18/pc.html">ESOP PC Workshop</a> at Inria Paris: <a href="talks/2017-12-15-Secure-Compilation-ESOP-PC.pdf">slides</a> (2017-12-15)</li>
-    </ul>
-  </li>
-
-  <li style="margin-bottom: 1ex;"><em>The Quest for Formally Secure Compartmentalizing Compilation</em></a>
-    <ul style="font-size: small">
-      <li><a href="https://sympa.inria.fr/sympa/arc/epi-prosecco.seminars/2019-01/msg00001.html">Habilitation defense @ Inria Paris</a>: <a href="talks/2019-01-29-Secure-Compilation-Habil.pdf">slides</a> (2019-01-29)</li>
-    </ul>
-
-    <ul style="font-size: small">
-      <li><b>Invited Keynote talk</b> at <a href="https://fmse.info.uaic.ro/event/from-2018/">Working Formal Methods Symposium (FROM 2018)</a>: <a href="talks/2018-06-20-Secure-Compilation-FROM.pdf">slides</a> (2018-06-20)</li>
     </ul>
   </li>
 
