--- a/index.html
+++ b/index.html
@@ -811,7 +811,7 @@ I am very fortunate to work with a group of outstanding students and starting re
   </li>
 </ul>
 
-
+9 + 3.5 = 12.5
 <h2 id="talks">Talks</h2>
 <p>Here are my recent and upcoming talks. For a complete list of my talks please look <a href="talks.html">here</a>.</p>
 
@@ -819,7 +819,7 @@ I am very fortunate to work with a group of outstanding students and starting re
 
   <li style="margin-bottom: 1ex;"><em>My Journey in Secure Compilation</em></a>
     <ul style="font-size: small">
-      <li><a href="https://popl25.sigplan.org/home/PLMW-POPL-2025">Programming Languages Mentoring Workshop @ POPL'25</a>: <a href="talks/2025-01-21-My-Journey-in-Secure-Compilation.pdf">slides</a> (2025-01-21)</li>
+      <li><b>Recent:</b> <a href="https://popl25.sigplan.org/home/PLMW-POPL-2025">Programming Languages Mentoring Workshop @ POPL'25</a>: <a href="talks/2025-01-21-My-Journey-in-Secure-Compilation.pdf">slides</a> (2025-01-21)</li>
     </ul>
 
     <ul style="font-size: small">
@@ -979,10 +979,10 @@ IRISA, Rennes: <a href="talks/2018-02-05-Secure-Compilation-Rennes.pdf">slides</
 
 <ul style="width:42em; text-align: left">
 
-  <li style="margin-bottom: 1ex;"><b>Upcoming: <a href="https://moodle.ruhr-uni-bochum.de/course/view.php?id=60387">Proofs are Programs</a></b> course at <a href="https://informatik.rub.de/en/">Ruhr University Bochum</a>, October 2024--February 2025</a>
+  <li style="margin-bottom: 1ex;"><b>Ongoing: <a href="https://moodle.ruhr-uni-bochum.de/course/view.php?id=60387">Proofs are Programs</a></b> course at <a href="https://informatik.rub.de/en/">Ruhr University Bochum</a>, October 2024--February 2025</a>
   </li>
 
-  <li style="margin-bottom: 1ex;"><b>Ongoing: <a href="https://moodle.ruhr-uni-bochum.de/enrol/index.php?id=57071">Functional Programming</a></b> course at <a href="https://informatik.rub.de/en/">Ruhr University Bochum</a>, April--July 2024</a>
+  <li style="margin-bottom: 1ex;"><b>Recent: <a href="https://moodle.ruhr-uni-bochum.de/enrol/index.php?id=57071">Functional Programming</a></b> course at <a href="https://informatik.rub.de/en/">Ruhr University Bochum</a>, April--July 2024</a>
   </li>
 
   <li style="margin-bottom: 1ex;"><b>Recent: <a href="https://moodle.ruhr-uni-bochum.de/enrol/index.php?id=54279">Foundations of Programming Languages, Verification, and Security</a></b> course at <a href="https://informatik.rub.de/en/">Ruhr University Bochum</a>, October 2023--February 2024</a>
